tests/mm0_mmu/fail/bad-sort2413.mm0
-- bad modifier order
strict free pure provable sort s2413;